// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: User Create Page should render correctly by default 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Users",
      "to": "/account/users",
    }
  }
  empty={Object {}}
  title="Invite User"
>
  <Panel>
    <Panel.Section>
      <form
        onSubmit={[Function]}
      >
        <p>
          An invitation will be sent to the email address you supply
        </p>
        <Field
          component={[Function]}
          label="Email address"
          name="email"
          normalize={[Function]}
          validate={
            Array [
              [Function],
              [Function],
            ]
          }
        />
        <Field
          component={[Function]}
          grid={
            Object {
              "md": 6,
              "sm": 12,
              "xs": 12,
            }
          }
          name="access"
          options={
            Array [
              Object {
                "helpText": "Has access to all functionality in the UI. Has the ability to add additional administrators and create / invite users with a role of Reporting",
                "label": <strong>
                  Admin
                </strong>,
                "value": "admin",
              },
              Object {
                "helpText": "Has no access to functionality in the UI. Permissions include access to view all reports, and view all templates except being allowed to change them",
                "label": <strong>
                  Reporting
                </strong>,
                "value": "reporting",
              },
            ]
          }
          title="Role"
        />
        <Button
          disabled={false}
          primary={true}
          size="default"
          submit={true}
        >
          Add User
        </Button>
      </form>
    </Panel.Section>
  </Panel>
</Page>
`;

exports[`Page: User Create Page should render when pristine 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Users",
      "to": "/account/users",
    }
  }
  empty={Object {}}
  title="Invite User"
>
  <Panel>
    <Panel.Section>
      <form
        onSubmit={[Function]}
      >
        <p>
          An invitation will be sent to the email address you supply
        </p>
        <Field
          component={[Function]}
          label="Email address"
          name="email"
          normalize={[Function]}
          validate={
            Array [
              [Function],
              [Function],
            ]
          }
        />
        <Field
          component={[Function]}
          grid={
            Object {
              "md": 6,
              "sm": 12,
              "xs": 12,
            }
          }
          name="access"
          options={
            Array [
              Object {
                "helpText": "Has access to all functionality in the UI. Has the ability to add additional administrators and create / invite users with a role of Reporting",
                "label": <strong>
                  Admin
                </strong>,
                "value": "admin",
              },
              Object {
                "helpText": "Has no access to functionality in the UI. Permissions include access to view all reports, and view all templates except being allowed to change them",
                "label": <strong>
                  Reporting
                </strong>,
                "value": "reporting",
              },
            ]
          }
          title="Role"
        />
        <Button
          disabled={true}
          primary={true}
          size="default"
          submit={true}
        >
          Add User
        </Button>
      </form>
    </Panel.Section>
  </Panel>
</Page>
`;

exports[`Page: User Create Page should render when submitting 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Users",
      "to": "/account/users",
    }
  }
  empty={Object {}}
  title="Invite User"
>
  <Panel>
    <Panel.Section>
      <form
        onSubmit={[Function]}
      >
        <p>
          An invitation will be sent to the email address you supply
        </p>
        <Field
          component={[Function]}
          label="Email address"
          name="email"
          normalize={[Function]}
          validate={
            Array [
              [Function],
              [Function],
            ]
          }
        />
        <Field
          component={[Function]}
          grid={
            Object {
              "md": 6,
              "sm": 12,
              "xs": 12,
            }
          }
          name="access"
          options={
            Array [
              Object {
                "helpText": "Has access to all functionality in the UI. Has the ability to add additional administrators and create / invite users with a role of Reporting",
                "label": <strong>
                  Admin
                </strong>,
                "value": "admin",
              },
              Object {
                "helpText": "Has no access to functionality in the UI. Permissions include access to view all reports, and view all templates except being allowed to change them",
                "label": <strong>
                  Reporting
                </strong>,
                "value": "reporting",
              },
            ]
          }
          title="Role"
        />
        <Button
          disabled={true}
          primary={true}
          size="default"
          submit={true}
        >
          Loading
        </Button>
      </form>
    </Panel.Section>
  </Panel>
</Page>
`;
